# harness-core-clone

./: .gitleaksignore  WORKSPACE
120-ng-manager/: BUILD.bazel
120-ng-manager/chart/: Chart.yaml  values.yaml
260-delegate/: BUILD.bazel
332-ci-manager/chart/: values.yaml
332-ci-manager/chart/templates/: config.yaml  deployment.yaml
332-ci-manager/config/: ci-manager-config.yml
332-ci-manager/service/: BUILD.bazel
360-cg-manager/: config.yml
360-cg-manager/chart/: README.md  values.yaml
400-rest/: BUILD.bazel
420-delegate-service/: BUILD.bazel
440-connector-nextgen/: BUILD.bazel
870-cg-orchestration/: BUILD.bazel
930-delegate-tasks/: BUILD.bazel
930-ng-core-clients/: BUILD.bazel
932-connector-task/: BUILD.bazel
950-delegate-tasks-beans/: BUILD.bazel
batch-processing/service/: batch-processing-config.yml
ce-nextgen/config/: config.yml
debezium-service/chart/: Chart.yaml  README.md  values.yaml
debezium-service/chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml
debezium-service/config/: config.yml  manifest.yaml
dockerization/ng-manager/scripts/: start_process.sh
idp-service/misc/scripts/: idp_license_create_update.sh
oidc-core/: BUILD.bazel
oidc-core/src/main/java/io/harness/oidc/accesstoken/: BUILD.bazel  OidcAccessTokenStsApi.java
oidc-core/src/main/java/io/harness/oidc/config/: BUILD.bazel
oidc-core/src/main/java/io/harness/oidc/dto/: BUILD.bazel
oidc-core/src/main/java/io/harness/oidc/gcp/accesstoken/: BUILD.bazel  GcpOidcAccessTokenUtility.java
oidc-core/src/main/java/io/harness/oidc/gcp/connector/: BUILD.bazel
oidc-core/src/main/java/io/harness/oidc/gcp/constants/: GcpOidcServiceAccountAccessTokenResponse.java
oidc-core/src/main/java/io/harness/oidc/gcp/delegate/: BUILD.bazel  GcpOidcTokenExchangeDetailsForDelegate.java
oidc-core/src/main/java/io/harness/oidc/gcp/utility/: BUILD.bazel  GcpOidcTokenUtility.java
oidc-core/src/main/java/io/harness/oidc/jwks/: BUILD.bazel
pipeline-service/chart/templates/: config.yaml
pipeline-service/container/scripts/: replace_configs.sh  start_process.sh
pipeline-service/modules/orchestration/: BUILD.bazel
pipeline-service/modules/orchestration-beans/: BUILD.bazel
srm-service/chart/: Chart.yaml  values.yaml
ssca-manager/chart/: Chart.yaml  values.yaml
ssca-manager/config/: ssca-manager-config.yml
ssca-manager/service/: BUILD.bazel
template-service/service/: BUILD.bazel
tools/build-optimization/: README.md
(+679 files in other folders)
