# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/GenTestRules.bzl", "run_tests")

java_library(
    name = "module",
    visibility = ["//visibility:public"],
    exports = [
        "//oidc-core/src/main/java/io/harness/oidc/accesstoken:module",
        "//oidc-core/src/main/java/io/harness/oidc/config:module",
        "//oidc-core/src/main/java/io/harness/oidc/dto:module",
        "//oidc-core/src/main/java/io/harness/oidc/entities:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/accesstoken:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/connector:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/constants:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/delegate:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/dto:module",
        "//oidc-core/src/main/java/io/harness/oidc/gcp/utility:module",
        "//oidc-core/src/main/java/io/harness/oidc/idtoken:module",
        "//oidc-core/src/main/java/io/harness/oidc/jwks:module",
        "//oidc-core/src/main/java/io/harness/oidc/rsa:module",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//:lombok",
        "//970-ng-commons/src/main/java/io/harness/rsa:module",
        "//990-commons-test:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//oidc-core/src/main/java/io/harness/oidc/idtoken:module",
        "@maven//:io_jsonwebtoken_jjwt",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_jooq_joor",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_zeroturnaround_zt_exec",
        "@maven//:pl_pragmatists_JUnitParams",
        "@maven//:xerces_xercesImpl",
    ],
)

run_tests()
